# serializer version: 1
# name: TestProjectBlockToString.test_basic_project_block
  '''
  [project]
  name = "test-package"
  version = "1.0.0"
  description = ""
  readme = "README.md"
  authors = []
  keywords = []
  requires-python = ">=3.9,<4.0"
  classifiers = [
      "Intended Audience :: Developers",
      "Programming Language :: Python",
      "Programming Language :: Python :: 3",
      "Programming Language :: Python :: 3.8",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Operating System :: OS Independent",
      "Operating System :: POSIX",
      "Operating System :: MacOS",
      "Operating System :: POSIX :: Linux",
      "Operating System :: Microsoft :: Windows",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Typing :: Typed"
  ]
  dependencies = [
  ]
  
  [dependency-groups]
  dev = [
      "mypy==1.13.0",
      "pytest>=7.4.0,<8.0.0",
      "pytest-asyncio>=0.23.5,<0.24.0",
      "python-dateutil>=2.9.0,<3.0.0",
      "types-python-dateutil>=2.9.0.20240316",
  ]
  
  '''
# ---
# name: TestProjectBlockToString.test_extras_handling
  '''
  [project]
  name = "test-package"
  version = "1.0.0"
  description = ""
  readme = "README.md"
  authors = []
  keywords = []
  requires-python = ">=3.9,<4.0"
  classifiers = [
      "Intended Audience :: Developers",
      "Programming Language :: Python",
      "Programming Language :: Python :: 3",
      "Programming Language :: Python :: 3.8",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Operating System :: OS Independent",
      "Operating System :: POSIX",
      "Operating System :: MacOS",
      "Operating System :: POSIX :: Linux",
      "Operating System :: Microsoft :: Windows",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Typing :: Typed"
  ]
  dependencies = [
  ]
  
  [dependency-groups]
  dev = [
      "mypy==1.13.0",
      "pytest>=7.4.0,<8.0.0",
      "pytest-asyncio>=0.23.5,<0.24.0",
      "python-dateutil>=2.9.0,<3.0.0",
      "types-python-dateutil>=2.9.0.20240316",
  ]
  
  [project.optional-dependencies]
  cli = [
      "click>=8.0.0",
      "rich>=10.0.0",
  ]
  async = [
      "aiohttp>=3.8.0",
  ]
  
  '''
# ---
# name: TestProjectBlockToString.test_python_version_without_carat
  '''
  [project]
  name = "test-package"
  version = "1.0.0"
  description = ""
  readme = "README.md"
  authors = []
  keywords = []
  requires-python = ">=3.8"
  classifiers = [
      "Intended Audience :: Developers",
      "Programming Language :: Python",
      "Programming Language :: Python :: 3",
      "Programming Language :: Python :: 3.8",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Operating System :: OS Independent",
      "Operating System :: POSIX",
      "Operating System :: MacOS",
      "Operating System :: POSIX :: Linux",
      "Operating System :: Microsoft :: Windows",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Typing :: Typed"
  ]
  dependencies = [
  ]
  
  [dependency-groups]
  dev = [
      "mypy==1.13.0",
      "pytest>=7.4.0,<8.0.0",
      "pytest-asyncio>=0.23.5,<0.24.0",
      "python-dateutil>=2.9.0,<3.0.0",
      "types-python-dateutil>=2.9.0.20240316",
  ]
  
  '''
# ---
# name: TestPyProjectTomlIntegration.test_pyproject_with_pydantic_v1
  '''
  [project]
  name = "test-package"
  version = "1.0.0"
  description = ""
  readme = "README.md"
  authors = []
  keywords = []
  requires-python = ">=3.9,<4.0"
  classifiers = [
      "Intended Audience :: Developers",
      "Programming Language :: Python",
      "Programming Language :: Python :: 3",
      "Programming Language :: Python :: 3.8",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Operating System :: OS Independent",
      "Operating System :: POSIX",
      "Operating System :: MacOS",
      "Operating System :: POSIX :: Linux",
      "Operating System :: Microsoft :: Windows",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Typing :: Typed"
  ]
  dependencies = [
  ]
  
  [dependency-groups]
  dev = [
      "mypy==1.13.0",
      "pytest>=7.4.0,<8.0.0",
      "pytest-asyncio>=0.23.5,<0.24.0",
      "python-dateutil>=2.9.0,<3.0.0",
      "types-python-dateutil>=2.9.0.20240316",
  ]
  
  [tool.pytest.ini_options]
  testpaths = [ "tests" ]
  asyncio_mode = "auto"
  
  [tool.mypy]
  plugins = ["pydantic.mypy"]
  
  [[tool.mypy.overrides]]
  module = "pydantic.*"
  follow_imports = "skip"
  
  [tool.ruff]
  line-length = 120
  
  [tool.ruff.lint]
  select = [
      "E",  # pycodestyle errors
      "F",  # pyflakes
      "I",  # isort
  ]
  ignore = [
      "E402",  # Module level import not at top of file
      "E501",  # Line too long
      "E711",  # Comparison to `None` should be `cond is not None`
      "E712",  # Avoid equality comparisons to `True`; use `if ...:` checks
      "E721",  # Use `is` and `is not` for type comparisons, or `isinstance()` for insinstance checks
      "E722",  # Do not use bare `except`
      "E731",  # Do not assign a `lambda` expression, use a `def`
      "F821",  # Undefined name
      "F841"   # Local variable ... is assigned to but never used
  ]
  
  [tool.ruff.lint.isort]
  section-order = ["future", "standard-library", "third-party", "first-party"]
  
  [build-system]
  requires = ["uv-build>=0.8.23,<0.9.0"]
  build-backend = "uv_build"
  
  [tool.uv.build-backend]
  module-name = "my_package"
  
  [tool.poetry]
  packages = [
      { include = "my_package"}
  ]
  
  '''
# ---
# name: TestPyProjectTomlIntegration.test_snapshot_full_pyproject_toml
  '''
  [project]
  name = "test-package"
  version = "1.0.0"
  description = ""
  readme = "README.md"
  authors = []
  keywords = []
  requires-python = ">=3.9,<4.0"
  classifiers = [
      "Intended Audience :: Developers",
      "Programming Language :: Python",
      "Programming Language :: Python :: 3",
      "Programming Language :: Python :: 3.8",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Operating System :: OS Independent",
      "Operating System :: POSIX",
      "Operating System :: MacOS",
      "Operating System :: POSIX :: Linux",
      "Operating System :: Microsoft :: Windows",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Typing :: Typed"
  ]
  dependencies = [
      "pydantic[email]>=2.0.0",
      "requests>=2.28.0",
      "typing-extensions>=4.0.0; python_version >= '3.9' and python_version < '4.0'",
  ]
  
  [dependency-groups]
  dev = [
      "mypy==1.13.0",
      "pytest>=7.4.0,<8.0.0",
      "pytest-asyncio>=0.23.5,<0.24.0",
      "python-dateutil>=2.9.0,<3.0.0",
      "types-python-dateutil>=2.9.0.20240316",
      "ruff==0.1.0",
  ]
  
  [project.optional-dependencies]
  cli = [
      "click>=8.0.0",
  ]
  all = [
      "click>=8.0.0",
      "aiohttp>=3.8.0",
  ]
  
  [tool.pytest.ini_options]
  testpaths = [ "tests" ]
  asyncio_mode = "auto"
  
  [tool.mypy]
  plugins = ["pydantic.mypy"]
  
  [tool.ruff]
  line-length = 120
  
  [tool.ruff.lint]
  select = [
      "E",  # pycodestyle errors
      "F",  # pyflakes
      "I",  # isort
  ]
  ignore = [
      "E402",  # Module level import not at top of file
      "E501",  # Line too long
      "E711",  # Comparison to `None` should be `cond is not None`
      "E712",  # Avoid equality comparisons to `True`; use `if ...:` checks
      "E721",  # Use `is` and `is not` for type comparisons, or `isinstance()` for insinstance checks
      "E722",  # Do not use bare `except`
      "E731",  # Do not assign a `lambda` expression, use a `def`
      "F821",  # Undefined name
      "F841"   # Local variable ... is assigned to but never used
  ]
  
  [tool.ruff.lint.isort]
  section-order = ["future", "standard-library", "third-party", "first-party"]
  
  [build-system]
  requires = ["uv-build>=0.8.23,<0.9.0"]
  build-backend = "uv_build"
  
  [tool.uv.build-backend]
  module-name = "my_package"
  module-root = "src"
  
  [tool.poetry]
  packages = [
      { include = "my_package", from = "src"}
  ]
  
  '''
# ---
# name: TestPyProjectTomlIntegration.test_write_basic_pyproject_toml
  '''
  [project]
  name = "test-package"
  version = "1.0.0"
  description = ""
  readme = "README.md"
  authors = []
  keywords = []
  requires-python = ">=3.9,<4.0"
  classifiers = [
      "Intended Audience :: Developers",
      "Programming Language :: Python",
      "Programming Language :: Python :: 3",
      "Programming Language :: Python :: 3.8",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Operating System :: OS Independent",
      "Operating System :: POSIX",
      "Operating System :: MacOS",
      "Operating System :: POSIX :: Linux",
      "Operating System :: Microsoft :: Windows",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Typing :: Typed"
  ]
  dependencies = [
      "requests==2.28.0",
  ]
  
  [dependency-groups]
  dev = [
      "mypy==1.13.0",
      "pytest>=7.4.0,<8.0.0",
      "pytest-asyncio>=0.23.5,<0.24.0",
      "python-dateutil>=2.9.0,<3.0.0",
      "types-python-dateutil>=2.9.0.20240316",
      "black==23.0.0",
  ]
  
  [tool.pytest.ini_options]
  testpaths = [ "tests" ]
  asyncio_mode = "auto"
  
  [tool.mypy]
  plugins = ["pydantic.mypy"]
  
  [tool.ruff]
  line-length = 120
  
  [tool.ruff.lint]
  select = [
      "E",  # pycodestyle errors
      "F",  # pyflakes
      "I",  # isort
  ]
  ignore = [
      "E402",  # Module level import not at top of file
      "E501",  # Line too long
      "E711",  # Comparison to `None` should be `cond is not None`
      "E712",  # Avoid equality comparisons to `True`; use `if ...:` checks
      "E721",  # Use `is` and `is not` for type comparisons, or `isinstance()` for insinstance checks
      "E722",  # Do not use bare `except`
      "E731",  # Do not assign a `lambda` expression, use a `def`
      "F821",  # Undefined name
      "F841"   # Local variable ... is assigned to but never used
  ]
  
  [tool.ruff.lint.isort]
  section-order = ["future", "standard-library", "third-party", "first-party"]
  
  [build-system]
  requires = ["uv-build>=0.8.23,<0.9.0"]
  build-backend = "uv_build"
  
  [tool.uv.build-backend]
  module-name = "my_package"
  
  [tool.poetry]
  packages = [
      { include = "my_package"}
  ]
  
  '''
# ---
# name: TestPyProjectTomlIntegration.test_write_with_extras
  '''
  [project]
  name = "test-package"
  version = "1.0.0"
  description = ""
  readme = "README.md"
  authors = []
  keywords = []
  requires-python = ">=3.9,<4.0"
  classifiers = [
      "Intended Audience :: Developers",
      "Programming Language :: Python",
      "Programming Language :: Python :: 3",
      "Programming Language :: Python :: 3.8",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Operating System :: OS Independent",
      "Operating System :: POSIX",
      "Operating System :: MacOS",
      "Operating System :: POSIX :: Linux",
      "Operating System :: Microsoft :: Windows",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Typing :: Typed"
  ]
  dependencies = [
  ]
  
  [dependency-groups]
  dev = [
      "mypy==1.13.0",
      "pytest>=7.4.0,<8.0.0",
      "pytest-asyncio>=0.23.5,<0.24.0",
      "python-dateutil>=2.9.0,<3.0.0",
      "types-python-dateutil>=2.9.0.20240316",
  ]
  
  [project.optional-dependencies]
  cli = [
      "click>=8.0.0",
      "rich>=10.0.0",
  ]
  async = [
      "aiohttp>=3.8.0",
  ]
  
  [tool.pytest.ini_options]
  testpaths = [ "tests" ]
  asyncio_mode = "auto"
  
  [tool.mypy]
  plugins = ["pydantic.mypy"]
  
  [tool.ruff]
  line-length = 120
  
  [tool.ruff.lint]
  select = [
      "E",  # pycodestyle errors
      "F",  # pyflakes
      "I",  # isort
  ]
  ignore = [
      "E402",  # Module level import not at top of file
      "E501",  # Line too long
      "E711",  # Comparison to `None` should be `cond is not None`
      "E712",  # Avoid equality comparisons to `True`; use `if ...:` checks
      "E721",  # Use `is` and `is not` for type comparisons, or `isinstance()` for insinstance checks
      "E722",  # Do not use bare `except`
      "E731",  # Do not assign a `lambda` expression, use a `def`
      "F821",  # Undefined name
      "F841"   # Local variable ... is assigned to but never used
  ]
  
  [tool.ruff.lint.isort]
  section-order = ["future", "standard-library", "third-party", "first-party"]
  
  [build-system]
  requires = ["uv-build>=0.8.23,<0.9.0"]
  build-backend = "uv_build"
  
  [tool.uv.build-backend]
  module-name = "my_package"
  
  [tool.poetry]
  packages = [
      { include = "my_package"}
  ]
  
  '''
# ---
